WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160616
child-transform-with-anchor-point-expected.html renders incorrectly
https://bugs.webkit.org/show_bug.cgi?id=160616
Summary
child-transform-with-anchor-point-expected.html renders incorrectly
Simon Fraser (smfr)
Reported
2016-08-05 16:10:59 PDT
child-transform-with-anchor-point-expected.html renders incorrectly
Attachments
Patch
(6.20 KB, patch)
2016-08-05 16:12 PDT
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-08-05 16:12:02 PDT
Created
attachment 285458
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-08-05 16:12:21 PDT
rdar://problem/27723718
Alexey Proskuryakov
Comment 3
2016-08-05 20:19:38 PDT
Comment on
attachment 285458
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=285458&action=review
> LayoutTests/ChangeLog:3 > + child-transform-with-anchor-point-expected.html renders incorrectly
Should the patch also remove expectations for this test? LayoutTests/platform/mac-wk1/TestExpectations:241:[ Sierra+ ] imported/blink/compositing/child-transform-with-anchor-point.html [ ImageOnlyFailure ]
Simon Fraser (smfr)
Comment 4
2016-08-05 23:26:40 PDT
Yes.
Simon Fraser (smfr)
Comment 5
2016-08-10 10:39:52 PDT
https://trac.webkit.org/changeset/204337
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug