child-transform-with-anchor-point-expected.html renders incorrectly https://bugs.webkit.org/show_bug.cgi?id=160616

Reviewed by Zalan Bujtas.
Source/WebCore:

If a layer has perspective, we need to ensure that its bounds don't collapse to 0x0 when clipped out,
otherwise the sublayerTransform geometry gets messed up.

Test: compositing/geometry/clipped-out-perspective.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateCompositedBounds):

LayoutTests:

* compositing/geometry/clipped-out-perspective-expected.html: Added.
* compositing/geometry/clipped-out-perspective.html: Added.
* compositing/layer-creation/overlap-transformed-preserved-3d-expected.txt: Rebaseline.
* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/178851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204337 268f45cc-cd09-0410-ab3c-d52691b4dbfc